trunk/Archive2/e2/0d079078a024e6/output
main.cpp:4:38: error: type 'int' cannot be used prior to '::' because it has no members
    void f() { using type = typename T::type; }
                                     ^
main.cpp:6:24: note: in instantiation of member function 'A<int>::f' requested here
    virtual void g() { f(); }    
                       ^
main.cpp:11:12: note: in instantiation of member function 'A<int>::g' requested here
    A<int> a;
           ^
1 error generated.
